<resources>
    <string name="app_name">I Remember</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="user_name">User name</string>
    <string name="avatar">Avatar</string>
    <string name="send">Send</string>
    <string name="share">Share</string>
    <string name="communicate">Communicate</string>
    <string name="tools">Tools</string>
    <string name="gallery">Gallery</string>
    <string name="camera">Camera</string>
    <string name="make_a_note">Make a note</string>
    <string name="microphone">Microphone</string>
    <string name="title">Title</string>
    <string name="note">Note</string>
    <string name="save">Save</string>
    <string name="mm_ss">mm:ss</string>
    <string name="file_not_found">File not found</string>
    <string name="play">Play</string>
    <string name="delete">Delete</string>
    <string name="alarm">Alarm</string>
    <string name="audio">Audio</string>
    <string name="ok">OK</string>
    <string name="of">of</string>
    <string name="cancel">Cancel</string>
    <string name="past_time">You can not select past time</string>
    <string name="error">Error</string>
    <string name="tell_me_something">Hi, Tell Me Something</string>
    <string name="notes">Notes</string>
    <string name="reminders">Reminders</string>
    <string name="archive">Archive</string>
    <string name="share_about_us">Share about us</string>
    <string name="pref_title_ringtone">Ringtone</string>
    <string name="max_image_title">Number of images exceeded</string>
    <string name="max_image_message">Unfortunately, the maximum number of images is 6 in one note</string>
    <string name="add_content">Add content</string>
    <string name="color">Color</string>
    <string name="delete_message_alert">Your note is not empty, do you want to delete it?</string>
    <string name="default_song">Sway</string>
    <string name="alarm_song">Alarm song</string>
    <string name="settings_ringtone_title">Alarm tone</string>
    <string name="add">Add</string>
    <string name="vibration">Vibration</string>
    <string name="soundless">Soundless</string>
    <string name="use_24_hour_format">Use 24-hour format</string>
    <string name="use_24_hour_format_default">Use 24-hour format - 13:00</string>
    <string name="alarm_duration">Alarm duration</string>
    <string name="alarm_duration_default">Alarm duration - 3 min</string>
    <string name="one_min">1 min</string>
    <string name="two_min">2 min</string>
    <string name="three_min">3 min</string>
    <string name="five_min">5 min</string>
    <string name="ten_min">10 min</string>
    <string name="thirty_min">30 min</string>
    <string name="edit">Edit</string>
    <string name="created">Created</string>
    <string name="images">Images</string>
    <string name="settings_alarm_duration">Alarm duration</string>
    <string name="permission">Permission</string>
    <string name="permission_gallery">For the operation of this function, the necessary permissions for writing / reading data and access to the use of a gallery</string>
    <string name="permission_camera">For the operation of this function, the necessary permissions for writing / reading data and access to the use of the camera</string>
    <string name="permission_microphone_rationale">For this function to work, the necessary permissions for writing / reading data and using a microphone</string>

    <string-array name="alarm_duration_array">
        <item>@string/one_min</item>
        <item>@string/two_min</item>
        <item>@string/three_min</item>
        <item>@string/five_min</item>
        <item>@string/ten_min</item>
        <item>@string/thirty_min</item>
    </string-array>

</resources>
