<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:id="@+id/root"
    android:layout_height="match_parent"
    tools:context="com.antohin.iremember.screen.activity.details.DetailsNoteActivity">

    <include layout="@layout/app_bar_layout"/>

    <ScrollView
        android:id="@+id/scroll"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="?attr/actionBarSize"
        app:layout_constraintBottom_toTopOf="@id/navigation"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.antohin.iremember.ui.SixImageView
                    android:id="@+id/multiImageView"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    />
            </android.support.constraint.ConstraintLayout>

            <EditText
                android:id="@+id/title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:hint="@string/title"
                android:inputType="textMultiLine"
                android:padding="@dimen/default_padding"
                android:textSize="@dimen/size_title_text"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/note"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:hint="@string/note"
                android:inputType="textMultiLine"
                android:padding="@dimen/default_padding"
                android:layout_marginBottom="?attr/actionBarSize"
                android:textSize="@dimen/size_note_text" />

            <com.antohin.iremember.ui.AudioMediaPlayer
                android:id="@+id/audio_media"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/audio"
                    android:layout_width="@dimen/size_ic_recycler"
                    android:layout_height="@dimen/size_ic_recycler"
                    android:contentDescription="@string/audio"
                    android:padding="@dimen/default_padding"
                    android:src="@drawable/ic_play"
                    android:visibility="gone"
                    tools:visibility="visible" />

                <ImageView
                    android:id="@+id/alarm"
                    android:layout_width="@dimen/size_ic_recycler"
                    android:layout_height="@dimen/size_ic_recycler"
                    android:background="?attr/selectableItemBackground"
                    android:contentDescription="@string/alarm"
                    android:padding="@dimen/default_padding"
                    android:src="@drawable/ic_alarm_on"
                    android:visibility="gone"
                    tools:visibility="visible" />

                <TextView
                    android:id="@+id/alarm_date_time"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="?attr/selectableItemBackground"
                    android:gravity="center|start"
                    android:paddingEnd="@dimen/default_padding"
                    android:paddingStart="@dimen/default_padding"
                    android:textSize="@dimen/size_alarm"
                    android:visibility="gone"
                    tools:text="08:00 22.11.2018"
                    tools:visibility="visible" />
            </LinearLayout>

        </LinearLayout>

    </ScrollView>

    <android.support.design.widget.BottomNavigationView
        android:id="@+id/navigation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimaryDark"
        android:theme="@style/AppTheme.NoActionBar"
        app:itemTextColor="@android:color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:menu="@menu/navigation_details" />

</android.support.constraint.ConstraintLayout>
